--- a/adcolony/package.json
+++ b/adcolony/package.json
@@ -11,8 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-rn-mo-pub-adcolony.git",
-    "baseUrl": "https://github.com/github_account/react-native-rn-mo-pub-adcolony"
+    "url": "git+https://github.com/wowmaking/react-native-mopub-adapters/tree/master/adcolony",
+    "baseUrl": "https://github.com/wowmaking/react-native-mopub-adapters/tree/master/adcolony"
   },
   "keywords": [
     "react-native"
