--- a/applovin/package.json
+++ b/applovin/package.json
@@ -11,8 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-rn-mo-pub-applovin.git",
-    "baseUrl": "https://github.com/github_account/react-native-rn-mo-pub-applovin"
+    "url": "git+https://github.com/wowmaking/react-native-mopub-adapters/tree/master/applovin",
+    "baseUrl": "https://github.com/wowmaking/react-native-mopub-adapters/tree/master/applovin"
   },
   "keywords": [
     "react-native"
