--- a/chartboost/package.json
+++ b/chartboost/package.json
@@ -11,8 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-rn-mo-pub-chartboost.git",
-    "baseUrl": "https://github.com/github_account/react-native-rn-mo-pub-chartboost"
+    "url": "git+https://github.com/wowmaking/react-native-mopub-adapters/tree/master/chartboost",
+    "baseUrl": "https://github.com/wowmaking/react-native-mopub-adapters/tree/master/chartboost"
   },
   "keywords": [
     "react-native"
