--- a/unity/package.json
+++ b/unity/package.json
@@ -11,8 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-rn-mo-pub-unity.git",
-    "baseUrl": "https://github.com/github_account/react-native-rn-mo-pub-unity"
+    "url": "git+https://github.com/wowmaking/react-native-mopub-adapters/tree/master/unity",
+    "baseUrl": "https://github.com/wowmaking/react-native-mopub-adapters/tree/master/unity"
   },
   "keywords": [
     "react-native"
