--- a/vungle/package.json
+++ b/vungle/package.json
@@ -11,8 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/github_account/react-native-rn-mo-pub-vungle.git",
-    "baseUrl": "https://github.com/github_account/react-native-rn-mo-pub-vungle"
+    "url": "git+https://github.com/wowmaking/react-native-mopub-adapters/tree/master/vungle",
+    "baseUrl": "https://github.com/wowmaking/react-native-mopub-adapters/tree/master/vungle"
   },
   "keywords": [
     "react-native"
